--- a/index.html
+++ b/index.html
@@ -2,33 +2,170 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Coffee Project!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Coffee!</h1>
+<header>
+    <div class="container row justify-content-center mx-auto">
+        <h1 class="text-center col-12 mx-auto p-6"><strong>Coffee!</strong></h1>
+    </div>
+</header>
+<div class="container justify-content-center mx-auto">
+    <div class="row justify-content-center mx-auto">
+        <div class="col-md-12">
+            <form>
+                <label for="roast-selection"></label>
+                <select id="roast-selection">
+                    <option>light</option>
+                    <option>medium</option>
+                    <option>dark</option>
+                </select>
+                <input id="submit" type="submit"/>
+            </form>
+        </div>
+    </div>
+</div>
+<div class="container-fluid col-sm-12 mt-1 justify-content-left">
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Light City
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Light
+        </div>
+    </div>
 
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input id="submit" type="submit" />
-    </form>
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Half City
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Light
+        </div>
+    </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Cinnamon
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Light
+        </div>
+    </div>
 
-    <script src="main.js"></script>
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            City
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Medium
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            American
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Medium
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Breakfast
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Medium
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            High
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Continental
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            New Orleans
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            European
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Espresso
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Viennese
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Italian
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            French
+        </div>
+        <div class="col-md-2.5 mr-2 justify-content-left">
+            Dark
+        </div>
+    </div>
+</div>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>NAME</th>
+        <th>ROAST</th>
+    </tr>
+    </thead>
+    <tbody id="coffees"></tbody>
+</table>
+
+<script src="main.js"></script>
 </body>
 </html>
