--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
+
+<!-- HTML PORTION IS FOR BOOTSTRAP CONTAINER/GRID ERRYTHANG ELSE WILL BE CSS & JS/DOM
+ WE WILL PROBABLY UTILIZE NATHAN'S CODE FOR THIS PART HERE -->
 <body>
 <header>
     <div class="container row justify-content-center mx-auto">
