--- a/index.html
+++ b/index.html
@@ -1,171 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Coffee Project!</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
-<body>
-<header>
-    <div class="container row justify-content-center mx-auto">
-        <h1 class="text-center col-12 mx-auto p-6"><strong>Coffee!</strong></h1>
-    </div>
-</header>
-<div class="container justify-content-center mx-auto">
-    <div class="row justify-content-center mx-auto">
-        <div class="col-md-12">
-            <form>
-                <label for="roast-selection"></label>
-                <select id="roast-selection">
-                    <option>light</option>
-                    <option>medium</option>
-                    <option>dark</option>
-                </select>
-                <input id="submit" type="submit"/>
-            </form>
+    <head>
+        <meta charset="UTF-8">
+        <title></title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+              crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+                crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+                crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <div class="page-wrap">        <!-- TOP WEB DIV-->
+            <div class="jumbotron jumbotron-fluid">
+                <h1 class="display-3 d-flex justify-content-center">DNE COFFEE</h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                        <div id="coffees" class="text-left"></div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="search-boys">
+                            <h1 class="new-coffee">Find Your Brew</h1>
+                            <form>
+                                <div class="form-group">
+                                    <label for="roast-selection">Roast</label>
+                                    <select class="form-control" id="roast-selection">
+                                        <option>all</option>
+                                        <option>light</option>
+                                        <option>medium</option>
+                                        <option>dark</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="name-selection">Coffee Name</label>
+                                    <input type="text" class="form-control" id="name-selection">
+                                    <input type="submit" id="submit" value="Submit Query" class="btn btn-dark">
+                                </div>
+                            </form>
+                            <h1 class="new-coffee">Add a Brew</h1>
+                            <form>
+                                <div class="form-group">
+                                    <label for="new-roast">Roast</label>
+                                    <select class="form-control" id="new-roast">
+                                        <option>Light</option>
+                                        <option>Medium</option>
+                                        <option>Dark</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="new-name">Coffee Name</label>
+                                    <input type="text" class="form-control" id="new-name">
+                                    <input type="submit" id="new-submit" value="Submit Drink" class="btn btn-dark">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="container-fluid col-sm-12 mt-1 justify-content-left">
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Light City
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Light
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Half City
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Light
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Cinnamon
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Light
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            City
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Medium
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            American
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Medium
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Breakfast
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Medium
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            High
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Continental
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            New Orleans
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            European
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Espresso
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Viennese
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Italian
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            French
-        </div>
-        <div class="col-md-2.5 mr-2 justify-content-left">
-            Dark
-        </div>
-    </div>
-</div>
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>NAME</th>
-        <th>ROAST</th>
-    </tr>
-    </thead>
-    <tbody id="coffees"></tbody>
-</table>
-
-<script src="main.js"></script>
-</body>
+        <script src="main.js"></script>
+    </body>
 </html>
