adds html and js updates

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <div class="form-group">
                                     <label for="name-selection">Coffee Name</label>
                                     <input type="text" class="form-control" id="name-selection">
-                                    <input type="submit" id="submit" value="Submit Query" class="btn btn-dark">
+                                    <input type="submit" id="submit" value="Submit" class="btn btn-dark">
                                 </div>
                             </form>
                         </div>
@@ -74,7 +74,8 @@
                                 <label for="new-name">Coffee Name</label>
                                 <input type="text" class="form-control" id="new-name">
                                 <div>
-                                    <input type="submit" id="new-submit" value="Submit Drink" class="btn btn-dark">
+
+                                    <input type="submit" id="new-submit" value="Submit"  class="btn btn-dark">
                                 </div>
                             </div>
                         </form>
