--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                                 </div>
                             </form>
                         </div>
-                        <img src="https://i.pinimg.com/originals/88/5f/05/885f05a8c8d838ce9998b7a6747da823.gif"
-                             id="firstimage">
+<!--                        <img src="https://i.pinimg.com/originals/88/5f/05/885f05a8c8d838ce9998b7a6747da823.gif"-->
+<!--                             id="firstimage">-->
                     </div>
                     <div class="col-lg-4 col-md-4" id="row3">
                         <h1 class="new-coffee">Add a Brew</h1>
@@ -79,21 +79,18 @@
                                 </div>
                             </div>
                         </form>
-                        <img src="https://media.tenor.com/images/6a07aeb17516566170904ecb5e8eeb6b/tenor.gif"
-                             id="secondimage">
-                        <div id="tm">
-                            <p>DNE Coffee 2021
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                     class="bi bi-badge-tm" viewBox="0 0 16 16">
-                                    <path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"/>
-                                    <path d="M14 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
-                                </svg>
-                            </p>
-                        </div>
+<!--                        <img src="https://media.tenor.com/images/6a07aeb17516566170904ecb5e8eeb6b/tenor.gif"-->
+<!--                             id="secondimage">-->
                     </div>
                 </div>
             </div>
         </div>
         <script src="main.js"></script>
+    <footer class="footer"><center>DNE Coffee 2021
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+             class="bi bi-badge-tm" viewBox="0 0 16 16">
+            <path d="M5.295 11V5.995H7V5H2.403v.994h1.701V11h1.19zm3.397 0V7.01h.058l1.428 3.239h.773l1.42-3.24h.057V11H13.5V5.001h-1.2l-1.71 3.894h-.039l-1.71-3.894H7.634V11h1.06z"/>
+            <path d="M14 3a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12zM2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z"/>
+        </svg></center> </footer>
     </body>
 </html>
